--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,10 @@
 .home-container {
   display: flex;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #f9f9f9;
 }
 
 .main-input-container {
